--- a/my_bib_file.bib
+++ b/my_bib_file.bib
@@ -46,6 +46,7 @@
 }
 
 @misc{MNISTweb,
+	title={MNIST database},
 	url={http://yann.lecun.com/exdb/mnist/},
 	author={Yann LeCun, Corinna Cortes, Christopher J.C. Burges}
 }
@@ -89,4 +90,60 @@
   pages={709--727},
   year={2019},
   publisher={Elsevier}
+}
+
+@inproceedings{zhang2017split,
+  title={Split-brain autoencoders: Unsupervised learning by cross-channel prediction},
+  author={Zhang, Richard and Isola, Phillip and Efros, Alexei A},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={1058--1067},
+  year={2017}
+}
+
+@article{zou2008overview,
+  title={Overview of artificial neural networks},
+  author={Zou, Jinming and Han, Yi and So, Sung-Sau},
+  journal={Artificial Neural Networks},
+  pages={14--22},
+  year={2008},
+  publisher={Springer}
+}
+
+@inproceedings{cohen2017emnist,
+  title={EMNIST: Extending MNIST to handwritten letters},
+  author={Cohen, Gregory and Afshar, Saeed and Tapson, Jonathan and Van Schaik, Andre},
+  booktitle={2017 International Joint Conference on Neural Networks (IJCNN)},
+  pages={2921--2926},
+  year={2017},
+  organization={IEEE}
+}
+
+@article{breiman2001random,
+  title={Random forests},
+  author={Breiman, Leo},
+  journal={Machine learning},
+  volume={45},
+  number={1},
+  pages={5--32},
+  year={2001},
+  publisher={Springer}
+}
+
+@article{bramer2007avoiding,
+  title={Avoiding overfitting of decision trees},
+  author={Bramer, Max},
+  journal={Principles of data mining},
+  pages={119--134},
+  year={2007},
+  publisher={Springer}
+}
+
+@article{gunn1998support,
+  title={Support vector machines for classification and regression},
+  author={Gunn, Steve R and others},
+  journal={ISIS technical report},
+  volume={14},
+  number={1},
+  pages={5--16},
+  year={1998}
 }
