--- a/my_bib_file.bib
+++ b/my_bib_file.bib
@@ -50,6 +50,12 @@
 	url={http://yann.lecun.com/exdb/mnist/},
 	author={Yann LeCun, Corinna Cortes, Christopher J.C. Burges}
 }
+
+@misc{CLUSTER,
+	title={The CLUSTER Procedure: Clustering Methods},
+	url={https://support.sas.com/documentation/cdl/en/statug/63033/HTML/default/viewer.htm#statug_cluster_sect012.htm},
+	author={Tim Arnold}
+}
 	
 @article{hand1997statistical,
   title={Statistical classification methods in consumer credit scoring: a review},
@@ -140,10 +146,56 @@
 
 @article{gunn1998support,
   title={Support vector machines for classification and regression},
-  author={Gunn, Steve R and others},
+  author={Gunn, Steve R},
   journal={ISIS technical report},
   volume={14},
   number={1},
   pages={5--16},
   year={1998}
+}
+
+@book{spall2005introduction,
+  title={Introduction to stochastic search and optimization: estimation, simulation, and control},
+  author={Spall, James C},
+  volume={65},
+  year={2005},
+  publisher={John Wiley \& Sons}
+}
+
+@article{mcculloch1943logical,
+  title={A logical calculus of the ideas immanent in nervous activity},
+  author={McCulloch, Warren S and Pitts, Walter},
+  journal={The bulletin of mathematical biophysics},
+  volume={5},
+  number={4},
+  pages={115--133},
+  year={1943},
+  publisher={Springer}
+}
+
+@book{romesburg2004cluster,
+  title={Cluster analysis for researchers},
+  author={Romesburg, Charles},
+  year={2004},
+  publisher={Lulu. com}
+}
+
+@article{day1984efficient,
+  title={Efficient algorithms for agglomerative hierarchical clustering methods},
+  author={Day, William HE and Edelsbrunner, Herbert},
+  journal={Journal of classification},
+  volume={1},
+  number={1},
+  pages={7--24},
+  year={1984},
+  publisher={Springer}
+}
+
+@incollection{rokach2005clustering,
+  title={Clustering methods},
+  author={Rokach, Lior and Maimon, Oded},
+  booktitle={Data mining and knowledge discovery handbook},
+  pages={321--352},
+  year={2005},
+  publisher={Springer}
 }
