--- a/my_bib_file.bib
+++ b/my_bib_file.bib
@@ -199,3 +199,14 @@
   year={2005},
   publisher={Springer}
 }
+
+@article{hochreiter1998vanishing,
+	title={The vanishing gradient problem during learning recurrent neural nets and problem solutions},
+	author={Hochreiter, Sepp},
+	journal={International Journal of Uncertainty, Fuzziness and Knowledge-Based Systems},
+	volume={6},
+	number={02},
+	pages={107--116},
+	year={1998},
+	publisher={World Scientific}
+}
