redone caption for figure \ref{backnet}

--- a/main.tex
+++ b/main.tex
@@ -785,7 +785,7 @@ These, as well as the numerical results shown in the previous section are the re
 \begin{figure} [H]
     \centering
     \includegraphics [width = 12cm] {h/backnet.png}
-    \caption{Emerging pattern in a backpropagation network. \todo[inline]{manca contesto, questi sono i risultati per la rete neurale anche in input? (spiegare esattamente cosa stiamo vedendo, e che cosa deve trarre chi legge la mia tesi)}}
+    \caption{The weights of a network with the same structure, but trained witha backpropagation algorithm instead. Just like in figure \ref{heatmap}, each 28 by 28 subsquare represents one row of the matrix. Some structures are clearly recognizable, but there is no similarity to the original inputs.}
     \label{backnet}
 \end{figure}
 
