--- a/main.tex
+++ b/main.tex
@@ -880,14 +880,14 @@ While this was expected to produce different patterns in synapses, both the patt
 \begin{figure} [H]
     \centering
     \includegraphics [width=10cm ] {o/0.png}
-    \caption{"Monotype" batch example}
+    \caption{"Monotype" minibatch example, contaning 100 samples.}
     \label{monotype}
 \end{figure}
 
 \begin{figure} [H]
     \centering
     \includegraphics [width=10cm ] {o/31.png}
-    \caption{"One-vs-one" batch example.}
+    \caption{"One-vs-one" minibatch example, containing 100 samples.}
     \label{1v1}
 \end{figure}
 
@@ -1147,7 +1147,7 @@ All clusters can be visualized in the appendix.
 \begin{figure} [H]
     \centering
     \includegraphics [width=\textwidth]{o/clustering.png}
-    \caption{The resulting dendrogram. The between parenthesis number at the bottom of each line represents the number of samples in that particular cluster. Black dots represent a merge between of two clusters.}
+    \caption{The resulting dendrogram. The between parenthesis number at the bottom of each line represents the number of samples in that particular cluster. Black dots represent a merge between two clusters.}
     \label{clustering}
 \end{figure}
 
